--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PROJECT</title>
+    <title>Project</title>
 
+    <link rel="shortcut icon" href="/static/img/" type="image/x-icon" />
     <link type="text/css" rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/popup.css">
 
