--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -3,5 +3,6 @@
       <td>{{ d[0] }}</td>
       <td>{{ d[1] }}</td>
       <td>{{ d[2] }}</td>
+      <td><input type="checkbox" name="chbDelete[]" id="chbDelete" value="{{d[3]}}"/></td>
     </tr>
 {% endfor %}
