--- a/templates/table.html
+++ b/templates/table.html
@@ -44,7 +44,7 @@
     </table>
 </div>
 
-<!--{% include "includes/update_table.html" %}-->
+<div class="modal fade" id="update-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;"></div>
 
 <div id="nesto"></div>
 
