--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -4,5 +4,6 @@
       <td>{{ d[1] }}</td>
       <td>{{ d[2] }}</td>
       <td><input type="checkbox" name="chbDelete[]" id="chbDelete" value="{{d[3]}}"/></td>
+      <td><a href="#" data-toggle="modal" data-target="#update-modal" id="pera" data-id="{{d[3]}}">Edit</a></td>
     </tr>
 {% endfor %}
