--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -12,8 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        {% if is_session %} <li><a href="/search">Tabela </a></li>{% endif %}
-        <li><a href="#">Link2</a></li>
+        {% if is_session %} <li><a href="/search">Tabela </a></li>
+        <li><a href="/upload_file">Upload file</a></li>{% endif %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
        {% if is_session %} <li><a href="/logout">Logout</a></li>{% endif %}
